resources/js/Pages/Reader/Sidebar.module.css
.searchCode {
    font-weight: 700;
    font-size: 10px;
    background-color: light-dark(
        var(--mantine-color-gray-0),
        var(--mantine-color-dark-7)
    );
    border: 1px solid
        light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
}

.mainLinks {
    padding-bottom: var(--mantine-spacing-md);
    padding: 8px var(--mantine-spacing-xs);
}

.collectionsHeader {
    padding-left: calc(var(--mantine-spacing-md) + 2px);
    padding-right: var(--mantine-spacing-md);
    margin-bottom: 5px;
}

.collections {
    padding-left: calc(var(--mantine-spacing-md) - 6px);
    padding-right: calc(var(--mantine-spacing-md) - 6px);
    padding-bottom: var(--mantine-spacing-md);
    cursor: pointer;
}

.mainLink {
    cursor: pointer;
    display: flex;
    align-items: center;
    width: 100%;
    font-size: var(--mantine-font-size-xs);
    padding: 8px var(--mantine-spacing-xs);
    border-radius: var(--mantine-radius-sm);
    font-weight: 500;
    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));

    &:hover {
        background-color: light-dark(
            var(--mantine-color-gray-1),
            var(--mantine-color-dark-6)
        );
        color: light-dark(
            var(--mantine-color-gray-7),
            var(--mantine-color-dark-0)
        );
    }
}

.mainLinkInner {
    display: flex;
    align-items: center;
    flex: 1;
}

.mainLinkIcon {
    margin-right: var(--mantine-spacing-sm);
    color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-2));
}

.mainLinkBadge {
    min-width: fit-content;
    pointer-events: none;
    margin-left: 5px;
}

.feedMenuIcon {
    margin-left: 11px;
}

.collectionLink {
    display: block;
    padding: 8px var(--mantine-spacing-xs);
    text-decoration: none;
    border-radius: var(--mantine-radius-sm);
    font-size: var(--mantine-font-size-xs);
    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
    line-height: 1;
    font-weight: 500;
    transition: background-color 0.3s;

    &:hover {
        background-color: light-dark(
            var(--mantine-color-gray-1),
            var(--mantine-color-dark-6)
        );
        color: light-dark(
            var(--mantine-color-gray-7),
            var(--mantine-color-dark-0)
        );
    }
}

.activeFeed {
    transition: background-color 0.3s;
    background-color: light-dark(
        var(--mantine-color-gray-1),
        var(--mantine-color-dark-6)
    );
}

